--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -563,7 +563,7 @@ section {
 .services {
   width: 100%;
   height: 150vh;
-  background: url("../img/hero-bg.jpg") top center;
+  background: url("../img/testimonials-bg.jpg") top center;
   background-size: cover;
   position: relative;
 }
