--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1237,7 +1237,7 @@ section {
 }
 
 #footer .footer-top {
-  background: #151515;
+  background: #ffc451;
   border-bottom: 1px solid #222222;
   padding: 60px 0 30px 0;
 }
